# practNLPTools-lite

./: .coveragerc  .env  .env.test.bash  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pypirc  .travis.yml  .travis.yml.swp  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.html  README.md  README.rst  ch01.asciidoc  config.py  doc.rst  extras_require.json  in.parse  make_docs.sh  requirements.txt  requirements_dev.txt  requirements_huey.txt  requirements_optional.txt  requirements_py3.6.txt  requirements_redis.txt  requirements_ujson.txt  requirements_xxhash.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py  (+1 more)
.github/: ISSUE_TEMPLATE.md
api/: Makefile  conf.py  make.bat  readme.md
doc/: example.md  issues.md  stanford_installed_issues.md  stanford_installing_issues.md
docs/: .buildinfo  annotator_api.html  annotator_api.rst  api.html  api.rst  authors.html  changelog.html  cli.html  cli.rst  conf.py  contributing.html  end_point.html  end_point.rst  environment.html  environment.rst  example.html  example.rst  genindex.html  history.html  index.html  index.rst  installation.html  installation.rst  issues.html  issues.rst  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  settings.html  settings.rst  stanford_installing_issues.html  stanford_installing_issues.rst  usage.html  usage.rst
docs_pntl/: .gitignore  Makefile  annotator_api.rst  conf.py  end_point.rst  index.rst  make.bat
pntl/: .lexparser.sh.swp  Untitled.ipynb  __init__.py  (+7 more)
(+167 files in other folders)
