[bumpversion]
current_version = 0.3.5
commit = True
tag = True

[bumpversion:file:setup.py]
search = '{current_version}'
replace = '{new_version}'

[bumpversion:file:pntl/__init__.py]
search = '{current_version}'
replace = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[metadata]
description-file = README.rst

